--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
@@ -45,6 +46,7 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
     "@types/redux-thunk": "^2.1.0",
     "@types/styled-components": "^4.4.2",
     "redux-devtools-extension": "^2.13.8",
