--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "react-sanitized-html": "^2.0.0",
     "react-scripts": "3.3.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "sanitize-html": "^1.21.1",
     "styled-components": "^5.0.0",
     "styled-normalize": "^8.0.7"
   },
