--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "customize-cra": "^0.9.1",
     "react": "^16.12.0",
+    "react-app-polyfill": "^1.0.6",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
