--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "core-js": "^3.6.4",
     "customize-cra": "^0.9.1",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.6",
